--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Not Another Tech Blog</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
   </head>
   <body>
     <nav>
